fixed: extra margin in fixed button

--- a/src/components/fixedImage/fixedImage.css
+++ b/src/components/fixedImage/fixedImage.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .shrink {
     transition: 1s ease;
 }
